--- a/resources/main.fxml
+++ b/resources/main.fxml
@@ -1,5 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="64.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="182.0" prefWidth="433.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.nihas101.chip8.MainController">
+   <children>
+      <BorderPane layoutX="-1.0" layoutY="-3.0" prefHeight="189.0" prefWidth="433.0">
+         <top>
+            <GridPane alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+              </rowConstraints>
+               <children>
+                  <ToolBar prefHeight="35.0" prefWidth="439.0" GridPane.columnSpan="2">
+                    <items>
+                      <Button fx:id="romLoaderButton" mnemonicParsing="false" onAction="#loadRom" prefHeight="25.0" prefWidth="100.0" text="Load ROM" textAlignment="CENTER" />
+                        <ColorPicker fx:id="colorPickerSprite" onAction="#setColorSprite" prefHeight="25.0" prefWidth="150.0" promptText="Choose Color1" />
+                        <ColorPicker fx:id="colorPickerBackground" onAction="#setColorBackground" prefHeight="25.0" prefWidth="150.0" promptText="Choose Color2" />
+                    </items>
+                  </ToolBar>
+               </children>
+            </GridPane>
+         </top>
+      </BorderPane>
+   </children>
+</Pane>
