--- a/resources/main.fxml
+++ b/resources/main.fxml
@@ -1,34 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="182.0" prefWidth="433.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.nihas101.chip8.MainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.nihas101.chip8.MainController">
    <children>
-      <BorderPane layoutX="-1.0" layoutY="-3.0" prefHeight="189.0" prefWidth="433.0">
+      <BorderPane layoutX="-1.0" layoutY="-3.0" prefHeight="209.0" prefWidth="525.0">
          <top>
-            <GridPane alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+            <GridPane alignment="TOP_CENTER" prefHeight="30.0" prefWidth="525.0" BorderPane.alignment="CENTER">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="409.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="NEVER" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="116.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <ToolBar prefHeight="35.0" prefWidth="439.0" GridPane.columnSpan="2">
+                  <ToolBar prefHeight="35.0" prefWidth="263.0">
                     <items>
-                      <Button fx:id="romLoaderButton" mnemonicParsing="false" onAction="#loadRom" prefHeight="25.0" prefWidth="100.0" text="Load ROM" textAlignment="CENTER" />
-                        <ColorPicker fx:id="colorPickerSprite" onAction="#setColorSprite" prefHeight="25.0" prefWidth="150.0" promptText="Choose Color1" />
-                        <ColorPicker fx:id="colorPickerBackground" onAction="#setColorBackground" prefHeight="25.0" prefWidth="150.0" promptText="Choose Color2" />
+                      <Button fx:id="romLoaderButton" mnemonicParsing="false" onAction="#loadRom" prefHeight="25.0" prefWidth="100.0" text="Load ROM" textAlignment="CENTER">
+                           <tooltip>
+                              <Tooltip text="Load a ROM" />
+                           </tooltip></Button>
+                        <ColorPicker fx:id="colorPickerSprite" onAction="#setColorSprite" prefHeight="25.0" prefWidth="85.0" promptText="Choose Color1">
+                           <tooltip>
+                              <Tooltip text="Set sprite color" />
+                           </tooltip></ColorPicker>
+                        <ColorPicker fx:id="colorPickerBackground" onAction="#setColorBackground" prefHeight="25.0" prefWidth="85.0" promptText="Choose Color2">
+                           <tooltip>
+                              <Tooltip text="Set background color" />
+                           </tooltip></ColorPicker>
                     </items>
+                  </ToolBar>
+                  <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1">
+                     <items>
+                        <Label prefHeight="17.0" prefWidth="59.0" text="Set Speed:" />
+                        <TextField fx:id="speedTextField" onAction="#setSpeed" prefHeight="25.0" prefWidth="40.0" promptText="Set speed" text="1.0">
+                           <tooltip>
+                              <Tooltip text="Set the speed of the emulation" />
+                           </tooltip></TextField>
+                     </items>
                   </ToolBar>
                </children>
             </GridPane>
